Bug 1950497 - Persisted Search revert button is hard to see when certain themes are enabled r=desktop-theme-reviewers,urlbar-reviewers,jteow,emilio
Use 'fill: var(--toolbarbutton-icon-fill-attention)', which can be customized by themes.

Differential Revision: https://phabricator.services.mozilla.com/D239663

--- a/browser/themes/shared/urlbar-searchbar.css
+++ b/browser/themes/shared/urlbar-searchbar.css
@@ -824,19 +824,22 @@
   }
 }
 
-/* Persisted Search Terms rules specific when the Unified Search Button is present */
-/* stylelint-disable-next-line media-query-no-invalid */
+/* Persisted Search revert button */
+
+.urlbar-revert-button {
+  list-style-image: url(chrome://global/skin/icons/defaultFavicon.svg);
+  fill: var(--toolbarbutton-icon-fill-attention);
+
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
+}
+
 #urlbar[persistsearchterms] {
   #urlbar-revert-button-container {
     display: inherit;
   }
-  .urlbar-revert-button {
-    list-style-image: url(chrome://global/skin/icons/defaultFavicon.svg);
-    fill: var(--color-accent-primary);
-  }
-  .urlbar-revert-button:focus-visible {
-    outline: var(--focus-outline);
-  }
+
   .urlbar-go-button {
     display: none;
   }
